# grafana-tokio-console-datasource

./: .gitignore  CHANGELOG.md  Cargo.toml  Dockerfile  PLUGIN.md  README.md  docker-compose.yaml  package.json
.cargo/: config.toml
.github/workflows/: changelog.yml  ci.yml  publish.yml  release.yml
backend/: Cargo.toml  Dockerfile
backend/plugin/: Cargo.toml
backend/plugin/src/: metadata.rs  plugin.rs  task.rs
backend/src/: connection.rs  lib.rs  main.rs  plugin.rs  task.rs  util.rs
backend/src/plugin/: data.rs  diagnostics.rs  mod.rs  resource.rs  stream.rs
backend/xtask/src/: main.rs
dashboards/: README.md
provisioning/: dashboards
provisioning/dashboards/: dashboards.yaml
provisioning/datasources/: datasources.yaml
src/: AppConfig.tsx  ConfigEditor.tsx  QueryEditor.tsx  VariableQueryEditor.tsx  datasource.ts  module.ts  plugin.json  types.ts
src/dashboards/: overview.json  task-details.json  task-list.json
src/datasource-tokio-console/: QueryEditor.tsx  datasource.ts  module.ts  plugin.json  types.ts
xtask/src/: main.rs
