[package]
name = "grafana-tokio-console-datasource"
version = "0.1.0"
edition = "2021"
license = "MIT/Apache-2.0"

[dependencies]
async-stream = "0.3.2"
bytes = "1.1.0"
chrono = "0.4.19"
console-api = "0.2.0"
console-subscriber = "0.1.3"
dashmap = "5.2.0"
futures = "0.3.17"
futures-core = "0.3.17"
futures-util = "0.3.17"
grafana-plugin-sdk = "0.3.0"
h2 = "0.3.7"
hdrhistogram = "7.4.0"
http = "0.2.5"
humantime = "2.1.0"
once_cell = "1.8.0"
prost-types = "0.10.1"
rand = "0.8.4"
regex = "1.5.4"
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0.68"
thiserror = "1.0.29"
tokio = { version = "1.12.0", features = ["rt-multi-thread", "time"] }
tokio-stream = "0.1.7"
tonic = "0.7.1"
tonic-health = "0.6.0"
tracing = "0.1.29"
tracing-subscriber = "0.3.2"
