[package]
name = "grafana-tokio-console-datasource"
version = "0.1.0"
edition = "2021"
license = "MIT/Apache-2.0"

[dependencies]
anyhow = "1.0.45"
async-stream = "0.3.2"
chrono = "0.4.19"
console-api = { git = "https://github.com/tokio-rs/console", rev = "042c1f78447839bed54538ed89b9277e437ed6b4" }
console-subscriber = { git = "https://github.com/tokio-rs/console", rev = "042c1f78447839bed54538ed89b9277e437ed6b4" }
dashmap = "4.0.2"
futures = "0.3.17"
futures-core = "0.3.17"
futures-util = "0.3.17"
grafana-plugin-sdk = { git = "https://github.com/grafana/grafana-plugin-sdk-rust", rev = "bb16a32f8d217d2a3ee4039055bf20b703e2ae88" }
h2 = "0.3.7"
hdrhistogram = "7.4.0"
once_cell = "1.8.0"
prost-types = "0.9.0"
rand = "0.8.4"
regex = "1.5.4"
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0.68"
thiserror = "1.0.29"
tokio = { version = "1.12.0", features = ["rt-multi-thread", "time"] }
tokio-stream = "0.1.7"
tonic = "0.6.1"
tonic-health = "0.5.0"
tracing = "0.1.29"
tracing-subscriber = "0.3.2"

[[bin]]
name = "gpx_grafana-tokio-console"
path = "src/main.rs"
